Refactor (compiler)!: better using symbols